# rust-book

./: Cargo.toml  README.md
chapter04/ownership/src/: main.rs
chapter04/slice/src/: main.rs
chapter07/restaurant-files/: Cargo.toml
chapter07/restaurant-files/src/front_of_house/: hosting.rs
chapter07/restaurant/src/: lib.rs
chapter08/vector/src/: main.rs
chapther4/ownership_functions/src/: main.rs
crates/chapter-02/guessing_game/src/: main.rs
crates/chapter-04/ownership/src/: main.rs
crates/chapter-04/ownership_functions/src/: main.rs
crates/chapter-07/restaurant-files/src/: front_of_house.rs  lib.rs
crates/chapter-07/restaurant/src/: lib.rs
crates/chapter-09/: Cargo.toml
crates/chapter-09/src/: main.rs
crates/chapter-10/src/: main.rs
crates/chapter-11/adder/src/: lib.rs
crates/chapter-12/minigrep/src/: lib.rs  main.rs
crates/chapter-13/src/: main.rs
crates/chapter-15/src/: main.rs
crates/chapter-16/src/: main.rs
crates/chapter-17-blog/: Cargo.toml
crates/chapter-17-blog-type-state/: Cargo.toml
crates/chapter-17-blog-type-state/src/: main.rs
crates/chapter-17-blog/src/: lib.rs  main.rs
crates/chapter-17/src/: main.rs
crates/chapter-20/hello/src/: main.rs
crates/chapter-20/webserver-thread/: Cargo.toml
crates/chapter-20/webserver-thread/src/: lib.rs  main.rs
enums/src/: main.rs
loops/src/: main.rs
rectangles/src/: main.rs
structs/src/: main.rs
variables/src/: main.rs
