[workspace]
resolver = "2"

members = [
  "crates/chapter-09",
  "crates/chapter-04/ownership",
  "crates/chapter-04/ownership_functions",
  "crates/chapter-04/slice",
  "crates/chapter-07/restaurant",
  "crates/chapter-07/restaurant-files",
  "crates/chapter-08/vector",
  "crates/chapter-06/enums",
  "crates/chapter-02/guessing_game",
  "crates/chapter-01/hello_cargo",
  "crates/chapter-03/loops",
  "crates/chapter-03/variables",
  "crates/chapter-05/rectangles",
  "crates/chapter-05/structs",
  "crates/chapter-10", "crates/chapter-11/adder", "crates/chapter-12/minigrep", "crates/chapter-15",
]
